fix(server): disable horizontal scroll on mobile

--- a/server/assets/marketing/marketing.css
+++ b/server/assets/marketing/marketing.css
@@ -22,6 +22,10 @@
   color-scheme: light;
 }
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   display: flex;
   flex-direction: column;
